Implement dynamic level test with progressive listening complexity and anti-gaming
Phase 1: Dynamic question bank in DB (156 questions across 4 types and 5 levels)
  - test_questions table with random selection per type/level
  - Questions served from DB instead of hardcoded in use case
  - TestQuestionRepository with native RANDOM() queries

Phase 2: Listening with progressive complexity
  - A1: rhymes/homophones (0.8x speed)
  - A2: stress patterns, silent letters (0.85x)
  - B1: subordinate clauses, phrasal verbs (0.9x)
  - B2: conditionals, idioms, inversion (1.0x)
  - C1: complex sentences, advanced vocab (1.1x)
  - audioSpeed field in TestQuestion and API response

Phase 3: Level sync on retake
  - UserProfile.resetTest() method
  - PUT /api/profiles/{id}/reset-test endpoint
  - SubmitLevelTest response now includes updated profile
  - lastTestAt field in UserProfile for cooldown tracking

Phase 4: Anti-gaming measures
  - 24h cooldown between test retakes (TestCooldownException, 429 response)
  - test_question_history table tracks seen questions per user
  - Questions prioritize unseen ones, falls back to all if exhausted

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>