@@ -2,12 +2,14 @@ package com.faus535.englishtrainer.assessment.infrastructure.controller;
 
 import com.faus535.englishtrainer.assessment.application.GetLevelTestQuestionsUseCase;
 import com.faus535.englishtrainer.assessment.domain.TestQuestion;
+import com.faus535.englishtrainer.user.domain.UserProfileId;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.UUID;
 
 @RestController
 class GetLevelTestQuestionsController {
@@ -18,15 +20,16 @@ class GetLevelTestQuestionsController {
         this.useCase = useCase;
     }
 
-    record TestQuestionResponse(String id, String type, String question, List<String> options, String level) {
+    record TestQuestionResponse(String id, String type, String question, List<String> options, String level,
+                                Double audioSpeed) {
     }
 
-    @GetMapping("/api/assessments/level-test")
-    ResponseEntity<List<TestQuestionResponse>> handle() {
-        List<TestQuestion> questions = useCase.execute();
+    @GetMapping("/api/profiles/{userId}/assessments/level-test/questions")
+    ResponseEntity<List<TestQuestionResponse>> handle(@PathVariable UUID userId) {
+        List<TestQuestion> questions = useCase.execute(new UserProfileId(userId));
         List<TestQuestionResponse> response = questions.stream()
-                .map(q -> new TestQuestionResponse(q.id(), q.type(), q.question(), q.options(), q.level()))
-                .collect(Collectors.toList());
+                .map(q -> new TestQuestionResponse(q.id().toString(), q.type(), q.question(), q.options(), q.level(), q.audioSpeed()))
+                .toList();
         return ResponseEntity.ok(response);
     }
 }
